apps/base/wg-easy/wg-easy-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-external
  namespace: wg-easy
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/component: wg-easy
    app.kubernetes.io/instance: wg-easy
    app.kubernetes.io/name: wg-easy
  ports:
    - name: wireguard
      port: 51822
      targetPort: wireguard
      protocol: UDP
