apps/base/wg-easy/wg-easy-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wg-easy-ingressroute
  namespace: wg-easy
  annotations:
    gethomepage.dev/href: "https://wg-easy.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "wg-easy"
    gethomepage.dev/description: "WireGuard UI + config management"
    gethomepage.dev/group: "VPN"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wg-easy.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: wg-easy
          port: 51821
          scheme: http
  tls: {}
